--- a/vercel.json
+++ b/vercel.json
@@ -13,24 +13,14 @@
             }
         }
     ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/app.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/$1"
-        }
-    ],
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/$1"
+            "destination": "/backend/app.py"
         },
         {
             "source": "/(.*)",
-            "destination": "/index.html"
+            "destination": "/frontend/index.html"
         }
     ]
 }
