fix: update vercel rewrite rule to point to root index.html

--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,7 @@
         },
         {
             "source": "/(.*)",
-            "destination": "/frontend/index.html"
+            "destination": "/index.html"
         }
     ]
 }
