--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,16 @@
             "destination": "/backend/app.py"
         },
         {
+            "source": "/assets/(.*)",
+            "destination": "/frontend/assets/$1"
+        },
+        {
+            "source": "/favicon.ico",
+            "destination": "/frontend/favicon.ico"
+        },
+        {
             "source": "/(.*)",
-            "destination": "/index.html"
+            "destination": "/frontend/index.html"
         }
     ]
 }
