--- a/vercel.json
+++ b/vercel.json
@@ -13,22 +13,21 @@
             }
         }
     ],
-    "rewrites": [
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "/backend/app.py"
+            "src": "/api/(.*)",
+            "dest": "backend/app.py"
         },
         {
-            "source": "/assets/(.*)",
-            "destination": "/frontend/assets/$1"
+            "src": "/assets/(.*)",
+            "dest": "/assets/$1"
         },
         {
-            "source": "/favicon.ico",
-            "destination": "/frontend/favicon.ico"
+            "handle": "filesystem"
         },
         {
-            "source": "/(.*)",
-            "destination": "/frontend/index.html"
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
